fixed overlays and made loading icon smaller on mobile

--- a/index.css
+++ b/index.css
@@ -147,20 +147,18 @@ body:not(body *) {
     }
     /* overlays */
         #settings {
-            position: absolute;
+            position: fixed;
+            top: 0;
+            left: 0;
+            overflow: auto;
             z-index: 1;
-
             display: none;
             flex-direction: column;
-
-            height: calc(100% - 20px);
+            height: 100%;
             width: calc(100% - 20px);
-
             padding: 10px;
-
             background-color: rgba(0, 0, 0, 0.75);
             backdrop-filter: blur(5px);
-
             color: white;
         }
             #settings_header {
@@ -178,7 +176,10 @@ body:not(body *) {
                 transform: rotate(0deg);
             }
         #loading_screen {
-            position: absolute;
+            position: fixed;
+            top: 0;
+            left: 0;
+            overflow: auto;
             z-index: 2;
         
             display: flex;
@@ -187,7 +188,7 @@ body:not(body *) {
             align-items: center;
             justify-content: center;
         
-            height: calc(100% - 20px);
+            height: 100%;
             width: calc(100% - 20px);
         
             padding: 10px;
@@ -216,5 +217,9 @@ body:not(body *) {
         }
         h1 {
             font-size: 175%;
+        }
+        #loading_screen > img {
+            width: 300px;
+            height: 300px;
         }
 }
